--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories
+# Directories
 local/
 test/
 vendor/
@@ -29,3 +29,4 @@ go.work.sum
 # env file
 .env
 .env.example
+env.json
